--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+ <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Life+Savers:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
   </head>
   <body>
+    <h1 id = "title"> Christmas Gift Ideas Under $100</h1>
     <div class="cover">
-      <p id = "title"> Christmas Gift Ideas Under $100</p>
     </div>
     <h3>Find the perfect holiday gift for everyone on your list this year on a budget. Browse gifts for your friends and family!</h3>
 
