json data update

--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <title></title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
- <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Life+Savers:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Life+Savers:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1 id = "title"> Christmas Gift Ideas Under $100</h1>
     <div class="cover">
+      <img src="background1.jpg" >
     </div>
-    <h3>Find the perfect holiday gift for everyone on your list this year on a budget. Browse gifts for your friends and family!</h3>
+    <h4>Find the perfect holiday gift for everyone on your list this year on a budget. Browse gifts for your friends and family!</h4>
 
     <hr>
-
-    <div id="photoGrid">
-
-    </div>
+    <h2>Kitchen & Bar</h2>
+    <div class = "grid" id="photoGrid1"> </div>
+    <hr>
+    <h2>Personal Care</h2>
+    <div class = "grid" id="photoGrid2"> </div>
+    <hr>
+    <h2>Home</h2>
+    <div class = "grid" id="photoGrid3"> </div>
+    <hr>
+    <h2>Fun</h2>
+    <div class = "grid" id="photoGrid4"> </div>
+    <hr>
+    <h2>Gadgets and Accessories</h2>
+    <div class = "grid" id="photoGrid5"> </div>
 
 
     <script src="script.js"></script>
